simplifying openmdao example

--- a/minimdo/tutorial/Algorithms.ipynb
+++ b/minimdo/tutorial/Algorithms.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "8f054005-45c7-4d12-9030-806283526b75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:39.716556Z",
-     "iopub.status.busy": "2022-08-30T09:25:39.716021Z",
-     "iopub.status.idle": "2022-08-30T09:25:46.984689Z",
-     "shell.execute_reply": "2022-08-30T09:25:46.984180Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:39.716556Z"
+     "iopub.execute_input": "2022-08-30T09:39:28.575799Z",
+     "iopub.status.busy": "2022-08-30T09:39:28.575799Z",
+     "iopub.status.idle": "2022-08-30T09:39:28.586801Z",
+     "shell.execute_reply": "2022-08-30T09:39:28.585808Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:28.575799Z"
     },
     "tags": []
    },
@@ -37,15 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "id": "f50dafc1-c860-46f9-8e6a-cdf04c6d9d5b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:47.973799Z",
-     "iopub.status.busy": "2022-08-30T09:25:47.973799Z",
-     "iopub.status.idle": "2022-08-30T09:25:47.995440Z",
-     "shell.execute_reply": "2022-08-30T09:25:47.994668Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:47.973799Z"
+     "iopub.execute_input": "2022-08-30T09:39:28.904108Z",
+     "iopub.status.busy": "2022-08-30T09:39:28.903109Z",
+     "iopub.status.idle": "2022-08-30T09:39:28.926094Z",
+     "shell.execute_reply": "2022-08-30T09:39:28.925390Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:28.904108Z"
     },
     "tags": []
    },
@@ -57,15 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "id": "4931a100-9484-475c-b2ac-6786db64e619",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:48.484975Z",
-     "iopub.status.busy": "2022-08-30T09:25:48.484975Z",
-     "iopub.status.idle": "2022-08-30T09:25:48.498941Z",
-     "shell.execute_reply": "2022-08-30T09:25:48.498295Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:48.484975Z"
+     "iopub.execute_input": "2022-08-30T09:39:29.073395Z",
+     "iopub.status.busy": "2022-08-30T09:39:29.073395Z",
+     "iopub.status.idle": "2022-08-30T09:39:29.083047Z",
+     "shell.execute_reply": "2022-08-30T09:39:29.083047Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:29.073395Z"
     },
     "tags": []
    },
@@ -84,15 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "690b488f-07e9-405f-8035-b34de17558c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:49.231653Z",
-     "iopub.status.busy": "2022-08-30T09:25:49.231653Z",
-     "iopub.status.idle": "2022-08-30T09:25:49.253852Z",
-     "shell.execute_reply": "2022-08-30T09:25:49.253350Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:49.231653Z"
+     "iopub.execute_input": "2022-08-30T09:39:29.518210Z",
+     "iopub.status.busy": "2022-08-30T09:39:29.517214Z",
+     "iopub.status.idle": "2022-08-30T09:39:29.536271Z",
+     "shell.execute_reply": "2022-08-30T09:39:29.535255Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:29.518210Z"
     },
     "tags": []
    },
@@ -103,7 +103,7 @@
        "4.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "f14f4990-edf6-4afc-9368-58c71138c790",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:49.710164Z",
-     "iopub.status.busy": "2022-08-30T09:25:49.709165Z",
-     "iopub.status.idle": "2022-08-30T09:25:49.727146Z",
-     "shell.execute_reply": "2022-08-30T09:25:49.727146Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:49.710164Z"
+     "iopub.execute_input": "2022-08-30T09:39:29.820034Z",
+     "iopub.status.busy": "2022-08-30T09:39:29.818963Z",
+     "iopub.status.idle": "2022-08-30T09:39:29.833295Z",
+     "shell.execute_reply": "2022-08-30T09:39:29.832763Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:29.820034Z"
     },
     "tags": []
    },
@@ -149,15 +149,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "b3ec84d4-70dd-427c-aeaf-f2d23cc3c1cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:51.127414Z",
-     "iopub.status.busy": "2022-08-30T09:25:51.127414Z",
-     "iopub.status.idle": "2022-08-30T09:25:51.146329Z",
-     "shell.execute_reply": "2022-08-30T09:25:51.145887Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:51.127414Z"
+     "iopub.execute_input": "2022-08-30T09:39:30.581516Z",
+     "iopub.status.busy": "2022-08-30T09:39:30.581516Z",
+     "iopub.status.idle": "2022-08-30T09:39:30.600831Z",
+     "shell.execute_reply": "2022-08-30T09:39:30.600176Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:30.581516Z"
     },
     "tags": []
    },
@@ -170,15 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "7d6799a9-8c4a-4fd3-9ec5-e810da435cec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:25:55.276374Z",
-     "iopub.status.busy": "2022-08-30T09:25:55.276374Z",
-     "iopub.status.idle": "2022-08-30T09:25:56.260637Z",
-     "shell.execute_reply": "2022-08-30T09:25:56.259986Z",
-     "shell.execute_reply.started": "2022-08-30T09:25:55.276374Z"
+     "iopub.execute_input": "2022-08-30T09:39:30.838521Z",
+     "iopub.status.busy": "2022-08-30T09:39:30.837527Z",
+     "iopub.status.idle": "2022-08-30T09:39:31.040129Z",
+     "shell.execute_reply": "2022-08-30T09:39:31.039420Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:30.838521Z"
     },
     "tags": []
    },
@@ -211,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "9a2b7754-7492-4e4b-b56f-7913d8fe0489",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-08-30T09:26:05.388968Z",
-     "iopub.status.busy": "2022-08-30T09:26:05.388968Z",
-     "iopub.status.idle": "2022-08-30T09:26:05.568608Z",
-     "shell.execute_reply": "2022-08-30T09:26:05.568608Z",
-     "shell.execute_reply.started": "2022-08-30T09:26:05.388968Z"
+     "iopub.execute_input": "2022-08-30T09:39:31.975674Z",
+     "iopub.status.busy": "2022-08-30T09:39:31.974672Z",
+     "iopub.status.idle": "2022-08-30T09:39:32.176503Z",
+     "shell.execute_reply": "2022-08-30T09:39:32.175162Z",
+     "shell.execute_reply.started": "2022-08-30T09:39:31.975674Z"
     },
     "tags": []
    },
@@ -408,7 +408,7 @@
    "id": "33158b92-ff27-4ee7-a999-a383348f078b",
    "metadata": {},
    "source": [
-    "### Fine Dumlage-Menelsohn decomposition"
+    "### Fine Dulmage-Menelsohn decomposition"
    ]
   },
   {
@@ -868,6 +868,75 @@
     "formulation_minscc = reformulate(edges_dir, tree_dir, outset_adj, outset_minscc, root_solver_name=1)\n",
     "render_incidence(*formulation_minscc, **vizargs);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e67b958a-0087-415f-aed4-509b0b56017d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-08-30T09:40:46.456024Z",
+     "iopub.status.busy": "2022-08-30T09:40:46.456024Z",
+     "iopub.status.idle": "2022-08-30T09:40:46.481509Z",
+     "shell.execute_reply": "2022-08-30T09:40:46.481281Z",
+     "shell.execute_reply.started": "2022-08-30T09:40:46.456024Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(({0: (1, 2, 4, 9),\n",
+       "   1: (6, 9, 7),\n",
+       "   2: (7, 9, 6),\n",
+       "   3: (2, 8, 9),\n",
+       "   4: (1,),\n",
+       "   5: (1, 2, 3),\n",
+       "   6: (4, 8, 11),\n",
+       "   7: (3, 8, 9, 4),\n",
+       "   8: (9, 11, 5),\n",
+       "   9: (2, 7, 8)},\n",
+       "  {0: (None,),\n",
+       "   1: (None,),\n",
+       "   2: (4,),\n",
+       "   3: (10,),\n",
+       "   4: (None,),\n",
+       "   5: (None,),\n",
+       "   6: (0,),\n",
+       "   7: (None,),\n",
+       "   8: (None,),\n",
+       "   9: (None,)},\n",
+       "  {1: (1,), 4: (9,), 0: (8,), 5: (11,), 7: (2,), 8: (3,), 9: (5,)}),\n",
+       " (OrderedDict([(1, 2),\n",
+       "               (4, 2),\n",
+       "               (2, 1),\n",
+       "               (0, 3),\n",
+       "               (5, 3),\n",
+       "               (7, 3),\n",
+       "               (8, 3),\n",
+       "               (9, 3),\n",
+       "               (3, 1),\n",
+       "               (6, 1)]),\n",
+       "  {2: 1, 3: 1},\n",
+       "  {1: 2, 9: 2, 8: 3, 11: 3, 2: 3, 3: 3, 5: 3}))"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formulation_minscc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4fb225-563a-491a-96ee-cfef2c3bdee6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
