--- a/minimdo/examples/xdsm.ipynb
+++ b/minimdo/examples/xdsm.ipynb
@@ -289,6 +289,7 @@
    },
    "outputs": [],
    "source": [
+    "from pyxdsm.XDSM import XDSM, OPT, SOLVER, FUNC, LEFT, RIGHT\n",
     "x = XDSM(use_sfmath=False)\n",
     "x.add_system(\"A1\", FUNC, r\"\\text{Comms}\")\n",
     "x.add_system(\"A2\", FUNC, r\"\\text{Bus}\")\n",
