--- a/minimdo/tutorial/Restructuring.ipynb
+++ b/minimdo/tutorial/Restructuring.ipynb
@@ -565,9 +565,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:minimdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-minimdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -579,7 +579,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a694de6fda351b2e6abf6df342a83029ffd7840d5f4e2b018751ced956a6df2b"
+   }
   }
  },
  "nbformat": 4,
