--- a/minimdo/newideas/mergemodels.ipynb
+++ b/minimdo/newideas/mergemodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "fa33f852-d0d8-43bc-8c01-8cdd358c181d",
    "metadata": {
     "execution": {
@@ -16,15 +16,15 @@
    },
    "outputs": [],
    "source": [
-    "from datastructures.api import Model, adda, addobj, addsolver\n",
-    "from compute import Var\n",
-    "from datastructures.execution import Component, component_hash\n",
-    "from datastructures.graphutils import copy_dicts"
+    "from modeling.api import Model, adda, addobj, addsolver, merge\n",
+    "from modeling.compute import Var\n",
+    "from modeling.execution import Component, component_hash\n",
+    "from graph.graphutils import copy_dicts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "6b549fa3-8f2f-46bb-bfbf-14a40eeaa7ad",
    "metadata": {
     "execution": {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "6edea8db-4c2c-4803-81a3-0cb6ea85afd5",
    "metadata": {
     "execution": {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "9381985d-08fe-4baa-a72d-19bc1a1513d7",
    "metadata": {
     "execution": {
@@ -82,13 +82,13 @@
     {
      "data": {
       "text/latex": [
-       "$a=2 \\ (x=1 ,y=1 )$"
+       "$a=2 \\ (y=1 ,x=1 )$"
       ],
       "text/plain": [
        "a"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "56c2e18c-c323-4737-97bb-47e0777f2c29",
    "metadata": {
     "execution": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "5f6988b2-81cb-4c20-869c-3ab580a33062",
    "metadata": {
     "execution": {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "93bf3897-6b5a-47aa-b35e-923273899295",
    "metadata": {
     "execution": {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "ade325fa-c3a3-40ee-b970-0be866929354",
    "metadata": {
     "execution": {
@@ -172,13 +172,13 @@
     {
      "data": {
       "text/latex": [
-       "$b=1 \\ (x=1 ,y=1 )$"
+       "$b=1 \\ (y=1 ,x=1 )$"
       ],
       "text/plain": [
        "b"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "2bade12a-b912-436e-94f8-487727bb7f2f",
    "metadata": {
     "execution": {
@@ -208,7 +208,7 @@
        "OrderedDict([(0, 1), (1, 1), (2, 2)])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,36 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "85f89a7c-ff7d-4a6e-a8a6-4f392d614a93",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-07-16T22:41:54.909216Z",
-     "iopub.status.busy": "2022-07-16T22:41:54.908175Z",
-     "iopub.status.idle": "2022-07-16T22:41:54.917729Z",
-     "shell.execute_reply": "2022-07-16T22:41:54.917488Z",
-     "shell.execute_reply.started": "2022-07-16T22:41:54.908175Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from collections import OrderedDict\n",
-    "def merge(model, edges, tree):\n",
-    "    medges,mtree = model.generate_formulation()\n",
-    "    new_edges = tuple(E | {key:val for key,val in mE.items() if key not in E} for mE,E in zip(medges, edges))\n",
-    "    Ftree,Vtree,Stree = copy_dicts(mtree)\n",
-    "    new_Ftree = OrderedDict(tree[0])\n",
-    "    for key,val in Ftree.items():\n",
-    "        if key not in edges[0]:\n",
-    "            new_Ftree[key] = val\n",
-    "    new_treeSV = tuple(E | {key:val for key,val in mE.items() if key not in E} for mE,E in zip(mtree[1:3], tree[1:3]))\n",
-    "    return new_edges, (new_Ftree, new_treeSV[0], new_treeSV[1]), model.components"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "838e8a01-0a55-49e0-a2cb-abac989efce5",
    "metadata": {
     "execution": {
@@ -260,24 +231,9 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(({0: ('x',), 1: ('x', 'y'), 2: ('x', 'y')}, {0: (1,), 1: ('a',), 2: ('b',)}),\n",
-       " (OrderedDict([(0, 1), (1, 1), (2, 2)]), {2: 1}, {}),\n",
-       " [(('x', 'y'), 0, (None,), 'x + y'),\n",
-       "  (('x', 'y'), 1, ('a',), 'x + y'),\n",
-       "  (('x', 'y'), 2, ('b',), 'x*y')])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "merge(model, edges_new, tree)"
+    "#merge(model, edges_new, tree)"
    ]
   },
   {
@@ -291,9 +247,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:minimdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-minimdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -306,6 +262,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a694de6fda351b2e6abf6df342a83029ffd7840d5f4e2b018751ced956a6df2b"
+   }
   }
  },
  "nbformat": 4,
