adapting pearl to new syntax

--- a/applications/pearl/pearl_opt.ipynb
+++ b/applications/pearl/pearl_opt.ipynb
@@ -17,16 +17,16 @@
    "outputs": [],
    "source": [
     "from pearl.pearl_initial_formulation import *\n",
-    "from datastructures.graphutils import flatten_tree\n",
-    "from datastructures.api import (edges_no_param, addobj, addineq, OPT, SolverRef, merge, \n",
+    "from graph.graphutils import flatten_tree\n",
+    "from modeling.api import (edges_no_param, addobj, addineq, OPT, SolverRef, merge, \n",
     "copy_dicts, setsolvefor)\n",
-    "from datastructures.graphutils import all_variables, all_edges\n",
-    "from datastructures.tearing import dir_graph, min_arc_set_assign\n",
-    "from datastructures.operators import reformulate, invert_edges\n",
-    "from datastructures.rendering import render_incidence\n",
-    "from datastructures.runpipeline import (model_to_problem, order_from_tree, \n",
+    "from graph.graphutils import all_variables, all_edges\n",
+    "from presolver.tearing import dir_graph, min_arc_set_assign\n",
+    "from graph.operators import reformulate, invert_edges\n",
+    "from graph.matrixview import render_incidence\n",
+    "from solver.runpipeline import (model_to_problem, order_from_tree, \n",
     "    default_solver_options, mdao_workflow)\n",
-    "from datastructures.transformations import transform_components\n",
+    "from modeling.transformations import transform_components\n",
     "from copy import deepcopy\n",
     "import openmdao.api as om\n",
     "import numpy as np"
@@ -1564,7 +1564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "minimdo",
    "language": "python",
    "name": "python3"
   },
@@ -1578,11 +1578,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ddbffdfc6e576b5d36b4191f1f51800df280a911e81ff2615f408143452d1a9a"
+    "hash": "a694de6fda351b2e6abf6df342a83029ffd7840d5f4e2b018751ced956a6df2b"
    }
   }
  },
