update in libraries

--- a/applications/pearl/pearl_thesis.ipynb
+++ b/applications/pearl/pearl_thesis.ipynb
@@ -16,21 +16,21 @@
    },
    "outputs": [],
    "source": [
-    "from compute import Var, Par\n",
-    "from datastructures.api import Model, adda, addf, addsolver, setsolvefor, evalexpr, edges_no_param, addobj, addineq, OPT, SolverRef\n",
-    "from datastructures.execution import edges_from_components\n",
-    "from datastructures.graphutils import (namefromsympy, dfs_tree, SOLVER, VAR, COMP, nested_sources, \n",
+    "from modeling.compute import Var, Par\n",
+    "from modeling.api import Model, adda, addf, addsolver, setsolvefor, evalexpr, edges_no_param, addobj, addineq, OPT, SolverRef\n",
+    "from modeling.execution import edges_from_components\n",
+    "from graph.graphutils import (namefromsympy, dfs_tree, SOLVER, VAR, COMP, nested_sources, \n",
     "sources, edges_to_Ein_Eout, flat_graph_formulation, root_solver, namefromid, copy_dicts, all_variables, all_edges)\n",
-    "from datastructures.nestedgraph import root_sources, build_typedgraph\n",
-    "from datastructures.workflow import get_f, order_from_tree, default_solver_options, mdao_workflow\n",
-    "from datastructures.workflow_mdao import mdao_workflow_with_args\n",
-    "from datastructures.operators import sort_scc, reorder_merge_solve\n",
-    "from datastructures.assembly import build_archi\n",
-    "from datastructures.runpipeline import model_to_problem\n",
-    "from datastructures.postprocess import print_inputs, print_outputs\n",
-    "from datastructures.rendering import render_incidence\n",
-    "from datastructures.tearing import dir_graph, min_arc_set_assign, min_arc_set, min_max_scc, min_max_scc2\n",
-    "from datastructures.transformations import transform_components\n",
+    "from graph.nestedgraph import root_sources, build_typedgraph\n",
+    "from graph.workflow import get_f, order_from_tree, default_solver_options, mdao_workflow\n",
+    "from solver.workflow_mdao import mdao_workflow_with_args\n",
+    "from graph.operators import sort_scc, reorder_merge_solve\n",
+    "from solver.assembly import build_archi\n",
+    "from solver.runpipeline import model_to_problem\n",
+    "from solver.postprocess import print_inputs, print_outputs\n",
+    "from graph.matrixview import render_incidence\n",
+    "from presolver.tearing import dir_graph, min_arc_set_assign, min_arc_set, min_max_scc, min_max_scc2\n",
+    "from modeling.transformations import transform_components\n",
     "from collections import OrderedDict\n",
     "import matplotlib.pyplot as plt\n",
     "from sympy import cos, pi, log, sqrt\n",
@@ -6914,7 +6914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "minimdo",
    "language": "python",
    "name": "python3"
   },
@@ -6928,11 +6928,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ddbffdfc6e576b5d36b4191f1f51800df280a911e81ff2615f408143452d1a9a"
+    "hash": "a694de6fda351b2e6abf6df342a83029ffd7840d5f4e2b018751ced956a6df2b"
    }
   }
  },
