--- a/applications/pearl/pearl_opt.ipynb
+++ b/applications/pearl/pearl_opt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "8091570d-d595-4bdc-bedc-8984c18cdff3",
    "metadata": {
     "execution": {
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "from pearl.pearl_initial_formulation import *\n",
+    "from pearl_initial_formulation import *\n",
     "from graph.graphutils import flatten_tree\n",
     "from modeling.api import (edges_no_param, addobj, addineq, OPT, SolverRef, merge, \n",
     "copy_dicts, setsolvefor)\n",
