--- a/applications/satellite/sat_opt.ipynb
+++ b/applications/satellite/sat_opt.ipynb
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "from datastructures.api import (edges_no_param, addobj, addineq, OPT, SolverRef, merge, \n",
+    "from modeling.api import (edges_no_param, addobj, addineq, OPT, SolverRef, merge, \n",
     "copy_dicts, setsolvefor, var_params)\n",
     "from datastructures.graphutils import flatten_tree, all_variables, all_edges\n",
     "from datastructures.tearing import dir_graph, min_arc_set_assign\n",
