adding argument handling module

--- a/minimdo/development/sellar.ipynb
+++ b/minimdo/development/sellar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +41,13 @@
     "    x**2+z2+y1+exp(-y2), arg_mapping=True)\n",
     "ineq1 = Component.fromsympy(\n",
     "    3.16-y1, arg_mapping=True)\n",
-    "ineq1 = Component.fromsympy(\n",
+    "ineq2 = Component.fromsympy(\n",
     "    y2-24, arg_mapping=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "J = lambda y: obj.evaldict({**y, **F.solve(y)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray(24.32798941, dtype=float64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "J({x:4, z2:2, z1:-1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = {**y, **sol}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +129,35 @@
        " {y_2: DeviceArray(3.51554944, dtype=float64)})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "F1.solve({**y, **sol}), F2.solve({**y, **sol}), F3.solve({**y, **sol})"
+    "F1.solve(z), F2.solve(z), F3.solve(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(DeviceArray(4.32662157, dtype=float64),\n",
+       " 0.8631098884280703,\n",
+       " -20.48445055785965)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.evaldict(z), ineq1.evaldict(z), ineq2.evaldict(z)"
    ]
   }
  ],
