--- a/minimdo/development/test_arghandling.ipynb
+++ b/minimdo/development/test_arghandling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "        [6, 7]]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        " 'a': 1}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "{'a': 6.135335283236612, 'b': array([1, 2, 3])}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "array([6.13533528, 1.        , 2.        , 3.        ])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "{'a': 6.135335283236612, 'b': array([1., 2., 3.])}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "{1: 'A', 2: 'B', 3: 'C'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,21 +259,21 @@
     "        mapping.update(reverse_encoding(new_decoder))\n",
     "    func = f.f\n",
     "    if g is not None:\n",
-    "        inter_order_out = tuple(mapping.get(key,key) for key in f.decoder.order)\n",
-    "        inter_order_in= tuple(mapping.get(key,key) for key in g.encoder.order)\n",
+    "        inter_order_out = tuple(mapping(key,key) for key in f.decoder.order)\n",
+    "        inter_order_in= tuple(mapping(key,key) for key in g.encoder.order)\n",
     "        F = EncodedFunction(f, f.encoder, inter_order_in)\n",
     "        G = EncodedFunction(g, inter_order_out, g.decoder)\n",
     "        func = lambda *args: G.dict_in_only(F.dict_out_only(*args))   \n",
-    "    new_encoder_order = tuple(mapping.get(key,key) for key in f.encoder.order)\n",
+    "    new_encoder_order = tuple(mapping(key,key) for key in f.encoder.order)\n",
     "    new_encoder = Encoder(new_encoder_order, parent=f.encoder)\n",
-    "    new_decoder_order = tuple(mapping.get(key,key) for key in new_decoder.order)\n",
+    "    new_decoder_order = tuple(mapping(key,key) for key in new_decoder.order)\n",
     "    new_decoder = Encoder(new_decoder_order, parent=new_decoder)\n",
     "    return EncodedFunction(func, new_encoder, new_decoder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,31 +284,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = compose(F, mapping={'x':1, 'y':2, 'z':3, 'a':4})"
+    "G = compose(F, mapping={'x':1, 'y':2, 'z':3, 'a':4}.get)\n",
+    "G = compose(F, mapping=lambda x,_: 'x_{}'.format(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{4: 6.049787068367864, 'b': array([1, 3, 2])}"
+       "{'x_a': 6.135335283236612, 'x_b': array([1, 2, 3])}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "G.dict_in_dict_out({1: 1, 2: 2, 3: 3})"
+    "G.dict_in_dict_out({'x_x': 1, 'x_z': 2, 'x_y': 3})"
    ]
   },
   {
