--- a/minimdo/development/sellar.ipynb
+++ b/minimdo/development/sellar.ipynb
@@ -10,6 +10,7 @@
     "from foundations.functionals import Functional\n",
     "from foundations.functionals import Projectable\n",
     "from foundations.functionals import Problem\n",
+    "from foundations.functionals import intersection\n",
     "from foundations.functionals import residual_solver\n",
     "from foundations.functionals import generate_opt_objects\n",
     "import numpy as np\n",
@@ -34,7 +35,34 @@
     "F1 = Functional()\n",
     "a = F1.Var('a', z1+z2-0.2*y2) # intermediate variable for demonstration purposes\n",
     "y1 = F1.Var('y_1', x**2+a)\n",
-    "F2 = Functional(y2, abs(y1)**.5+z1+z2)"
+    "F2 = Functional(y2, abs(y1)**.5+z1+z2)\n",
+    "F = intersection(F1, F2)\n",
+    "obj = x**2+z2+y1+exp(-y2)\n",
+    "ineq = [3.16-y1, y2-24] # technically represent residual sets\n",
+    "# eq = [F1.set, F2.set] # using residuals for F1 and F2\n",
+    "problem = Problem(obj, ineq, eliminate=F, \n",
+    "                bounds = {x:(0,10), z1:(0,10), z2:(0,10)}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{z_2: 1.0, x: 1.0, z_1: 1.0}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "problem.dict_in_dict_out({}, \n",
+    "                         x_initial={x: 1, z1: 1, z2: 1})"
    ]
   },
   {
@@ -43,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "F = Functional()\n",
+    "random_generator = np.random.default_rng(seed=41).random\n",
+    "F = Functional(random_generator=random_generator)\n",
     "F.add_encoded_functions(F1, F2)\n",
     "F.projectable = Projectable(\n",
     "    F1.projectable.encoded_functions\n",
@@ -53,56 +82,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random_generator = np.random.default_rng(seed=41).random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "xin = {x:0, z1:0, z2:0}\n",
-    "y = F.dict_in_dict_out(xin, \n",
-    "               random_generator=random_generator)"
+    "y = F.dict_in_dict_out(xin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{a: -0.04000000000000001, y_1: -0.04000000000000001, y_2: 0.2}"
+       "{a: -0.04, y_1: -0.04}"
       ]
      },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{a: -0.04000000000000001, y_1: -0.04000000000000001}"
-      ]
-     },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +121,7 @@
        "{y_2: DeviceArray(0.2, dtype=float64)}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,11 +167,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{a: 1.2968901115719298, y_1: 2.29689011157193, y_2: 3.5155494421403515}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "constant_generator = lambda : .2\n",
+    "random_generator = np.random.default_rng(seed=41).random\n",
     "eval_obj_constraints, x0 = opt_func(\n",
     "    x_initial=xin, \n",
     "    random_generator=random_generator)"
@@ -180,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,64 +221,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7787307530779818"
+       "4.326621574318912"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj_function(np.array([0,0,0]))"
+    "obj_function(x0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7787307530779818, array([  3.2, -23.8]), array([], dtype=float64))"
+       "array([1, 1, 1])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eval_obj_constraints(np.array([0,0,0]))"
+    "x0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "     fun: 3.1620869562729936\n",
-       "     jac: array([1.75486168e+00, 5.96046448e-08, 7.54861712e-01])\n",
+       "(4.326621574318912,\n",
+       " array([  0.86310989, -20.48445056]),\n",
+       " array([], dtype=float64))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_obj_constraints(x0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "     fun: 3.1620869562723763\n",
+       "     jac: array([1.75486168e+00, 2.98023224e-08, 7.54861712e-01])\n",
        " message: 'Optimization terminated successfully'\n",
        "    nfev: 32\n",
        "     nit: 8\n",
        "    njev: 8\n",
        "  status: 0\n",
        " success: True\n",
-       "       x: array([0.00000000e+00, 2.25490970e-16, 4.39440972e+00])"
+       "       x: array([0.00000000e+00, 1.45153495e-16, 4.39440972e+00])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
