--- a/minimdo/development/sellar.ipynb
+++ b/minimdo/development/sellar.ipynb
@@ -13,6 +13,7 @@
     "from foundations.functionals import intersection\n",
     "from foundations.functionals import residual_solver\n",
     "from foundations.functionals import generate_opt_objects\n",
+    "from foundations.functionals import eliminate\n",
     "import numpy as np\n",
     "from sympy import exp"
    ]
@@ -45,7 +46,36 @@
     "problem = Problem(obj, ineq, eliminate=F, \n",
     "                bounds={x:(0,10), z1:(0,10), z2:(0,10)})\n",
     "\n",
-    "xopt = problem.dict_in_dict_out(x0={x:1, z1:1, z2:1})"
+    "xopt = problem.dict_in_dict_out(x0={x:1, z1:5, z2:2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Felim = eliminate(F1, F2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{a: 1.2968901115719298, y_1: 2.2968901115719293}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Felim.dict_in_dict_out({z1:1, z2:1, x:1})"
    ]
   },
   {
