testing PEARL code with new syntax

--- a/minimdo/development/functional_noobj.ipynb
+++ b/minimdo/development/functional_noobj.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from modeling.compute import Var, create_vars\n",
-    "from modeling.arghandling import Encoder\n",
+    "from modeling.arghandling import Encoder, encode\n",
     "from foundations.functionals import encode_sympy\n",
     "from foundations.functional_noobj import eliminate_vars\n",
     "from foundations.functional_noobj import feed_forward\n",
@@ -16,6 +16,8 @@
     "from foundations.functional_noobj import residual_solver_determined\n",
     "from foundations.functional_noobj import residual_solver\n",
     "from foundations.functional_noobj import concatenate_residuals\n",
+    "from foundations.functional_noobj import optimizer_solver\n",
+    "from foundations.functional_noobj import external_encoder\n",
     "from sympy import exp\n",
     "import numpy as np"
    ]
@@ -56,7 +58,60 @@
     "F = feed_forward([F1, F2, F3, F4, F5, F6])\n",
     "R2 = eliminate_vars(R1, F)\n",
     "#R = concatenate_residuals([R1, R2])\n",
-    "RS = residual_solver(R2, Encoder((W,)), x_initial={W:1000})"
+    "RS = residual_solver(R2, Encoder((W,)), x_initial={W:7000})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{W: 7082.846459912354,\n",
+       " C_L: 0.906114212539708,\n",
+       " Re: 1828108.936362036,\n",
+       " C_f: 0.004138388946405071,\n",
+       " C_D: 0.03099440488006809,\n",
+       " D: 242.27476828398164,\n",
+       " W_w: 2142.8464599123567}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MDF = feed_forward([RS, F])\n",
+    "MDF.dict_in_dict_out(xin, cleanup=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{W: 7083.575373937885,\n",
+       " C_L: 0.90600653382041,\n",
+       " Re: 1828150.8796346504,\n",
+       " C_f: 0.004138369956816118,\n",
+       " C_D: 0.030987531620324762,\n",
+       " D: 242.27476038088258,\n",
+       " W_w: 2143.575373937888}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MDF.dict_in_dict_out(xopt,cleanup=True)"
    ]
   },
   {
@@ -65,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MDF = feed_forward([RS, F])"
+    "obj = eliminate_vars(encode_sympy(D), MDF)"
    ]
   },
   {
@@ -76,13 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "{W: 7082.846459912358,\n",
-       " C_L: 0.9061142125397086,\n",
-       " Re: 1828108.936362036,\n",
-       " C_f: 0.004138388946405071,\n",
-       " C_D: 0.030994404880068112,\n",
-       " D: 242.27476828398179,\n",
-       " W_w: 2142.846459912357}"
+       "array([-538.738611])"
       ]
      },
      "execution_count": 7,
@@ -91,55 +140,77 @@
     }
    ],
    "source": [
-    "MDF.dict_in_dict_out(xin, cleanup=True)"
+    "xin = {A:10,S:10,V:10,W:7000}\n",
+    "external_encoder(obj, Encoder((A,S,V,W)))(np.array([10,10,10,7000]))\n",
+    "external_encoder(R2, Encoder((A,S,V,W)))(np.array([10,10,10,7000]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = RS.dict_in_dict_out(xin, \n",
-    "                    x_initial={W:1000})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(C_L, Re, C_f, C_D, D, W_w) <- (V, S, W, A)"
+       "array([-538.738611])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MDF"
+    "R2.flat_in_only(encode(xin, R2.encoder.order, flatten=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=float64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "obj = eliminate_vars(encode_sympy(D), RS)"
+    "obj.flat_in_only(encode(xin, obj.encoder.order, flatten=True)),\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer_solver(encode_sympy(D), )"
+    "OPT = optimizer_solver(obj, eqs=(R2,), bounds={\n",
+    "    A:(0.1, 100),S:(0.1, 100),V:(0.1, 100),W:(0.1, 1e6)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\johan\\miniconda3\\envs\\minimdo\\lib\\site-packages\\scipy\\optimize\\optimize.py:282: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
+      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "xopt = OPT.dict_in_dict_out(x0={A:10,S:10,V:10,W:1000})"
    ]
   },
   {
